Fix - Small changes to css to fix responsive error when on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -442,6 +442,12 @@ pre {
   max-height: 340px;
   overflow-y: scroll; }
 
+    .percentage {
+      display: none; } 
+@media (min-width: 490px) {
+  .percentage {
+    display: block; } }
+
 .container {
   width: 100%;
   padding-right: 15px;
@@ -8334,7 +8340,7 @@ h1, h2, h3, h4, h5,
         margin-left: 0 !important; } }
     .ftco-navbar-light.scrolled .navbar-toggler {
       border: none;
-      color: rgba(0, 0, 0, 0.5) !important;
+      color: rgba(255, 255, 255, 0.5) !important;
       border-color: rgba(0, 0, 0, 0.5) !important;
       cursor: pointer;
       text-transform: uppercase;
